welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:9: error: '(' expected but identifier found.
for compteur <- 0 to nbPas {
    ^