welcome.lessons.welcome.loopfor.LoopFor.scala.code
var nbPas:Int = 0;
while (!estSurBiscuit()) {
	avance();
	(nbPas = nbPas + 1);
}
prendBiscuit();
var compteur: Int;
for compteur <- 0 to nbPas {
	recule()
}
poseBiscuit();